<resources>
    <string name="app_name">Estudonauta</string>
    <string name="strDireitos">Direitos reservados para Estudonauta.com</string>
    <string name="strEquipe">Equipe</string>
    <string name="strCursos">CURSOS</string>
    <string name="strMidia">Mídia</string>
    <string name="strVoltar">Voltar</string>
    <string name="strEquipeTitulo">Equipe Estudonauta</string>
    <string name="strEquipeDescicao">Aqui vai entrar a descrição...</string>
</resources>