<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/magenta"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/estudonautatopo" />

    <LinearLayout
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/btnEquipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clicouEquipe"
            android:text="@string/strEquipe"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnCursos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clicouCursos"
            android:text="@string/strCursos"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnMidia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clicouMidia"
            android:text="@string/strMidia"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/strDireitos"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>