<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Equipe">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="217dp"
        tools:layout_editor_absoluteY="138dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strEquipeTitulo"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView56"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:srcCompat="@drawable/logoestudonauta" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strEquipeDescicao" />

            <ImageView
                android:id="@+id/imageView57"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/fotocaynan" />

            <ImageView
                android:id="@+id/imageView58"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/fotoguanabara" />

            <ImageView
                android:id="@+id/imageView59"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/fotoitalo" />

            <ImageView
                android:id="@+id/imageView60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/fotomichel" />

            <ImageView
                android:id="@+id/imageView61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/fotopriscila" />

            <ImageView
                android:id="@+id/imageView62"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/fotoramon" />

            <ImageView
                android:id="@+id/imageView63"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/fotovera" />

            <ImageView
                android:id="@+id/imageView64"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/fotoygor" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnEquipeVoltar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/magenta"
        android:onClick="clickVoltar"
        android:text="@string/strVoltar"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>